--- a/templates/index.html
+++ b/templates/index.html
@@ -40,7 +40,7 @@
                 <i class="fas fa-money-bill-wave"></i>
             </div>
             <div class="stat-content">
-                <h3 id="totalRevenue">{% if revenue.amount_paid__sum == None %}0 ج.م{% else %}{{ revenue.amount_paid__sum }}{% endif %}</h3>
+                <h3 id="totalRevenue">{% if revenue.amount_paid__sum == None %}0 ج.م{% else %} ج.م{{ revenue.amount_paid__sum }}{% endif %}</h3>
                 <p>إجمالي الإيرادات</p>
             </div>
         </div>
